--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <h3>LOGO HERE</h3>
             </div>
             <div class="l-nav">
-                <a class="btn">Don't Click me</a>
+                <a class="btn" href="https://nitin-s-resume.vercel.app/" target="_blank">Don't Click me</a>
             </div>
         </nav>
     </div>
